2016-01-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvi.c: Symplify support of native type1 fonts in XeTeX.

2016-01-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dpxfile.c: Change \ to / for WIN32 also in the case where
	HAVE_MKSTEMP is defined (win32 only).
	* cff.h, dvi.c, t1_load.c: Improve the change made on 2015-08-05.
	The static function static int is_notdef_notzero() in dvi.c is removed.

2015-12-30  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	 * epdf.[ch], pdfdoc.[ch], pdfximage.[ch],
	spc_{dvips,html,misc,pdfm,util}.c, spc_util.h: Don't use global variables
	for selecting boundary box. Cleanups.

2015-12-29  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvipdfmx.c, dvi.c: Allow empty password in pdf:encrypt special.
	* dvipdfmx.c, pdfdoc.[ch], pdfobj.[ch]: Add option to disable Xref
	stream and object stream.

2015-12-28  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* bmpimage.c, dvipdfmx.c, pdfobj.[ch], pngimage.c: Support for predictor
	functions for FlateDecode filter. PNG optimal and TIFF2 predictor functions
	are currently implemented. It solves the preblem that PNG images become
	sometimes larger in size when embedded in PDF file.

2015-12-26  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pngimage.c: Workaround for Adobe Potoshop generated PNGs which have
	cHRM chunk but not gAMA chunk.
	* agl.c, spc_pdfm.c, unicode.c, unicode.h: Addition of some
	Unicode related functions. Try conversion to UTF16BE only for string
	objects which can be considered as a valid Unicode text.

2015-12-24  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* t1_load.c: Support for get/putinterval and get/put in encoding
	definition found in some Type1 fonts such as cmctt10.pfb.

2015-11-05  Karl Berry  <karl@tug.org>

	* data/dvipdfmx.cfg (D): add -dAutoRotatePages=/None.
	Suggestion/request from Akira, 4 Nov 2015 22:41:14.

2015-09-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: Remove conditional error message in kpathsea_debug,