@@ -1,3 +1,7 @@
+2016-01-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* t1_load.c: Avoid to crash for unsupported type1 fonts as native fonts.
+
 2016-01-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* dvi.c: Symplify support of native type1 fonts in XeTeX.
